# BlacklogiX

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: app.ts  db.ts  index.ts
backend/src/config/: env.ts
backend/src/routes/: auth.ts  health.ts  log-sources.ts
chat-backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
chat-backend/app/: config.py  main.py
chat-backend/app/api/: alert_routes.py  auth_routes.py  chat_routes.py  event_routes.py  integrity_routes.py  monitoring_routes.py  platform_routes.py  report_routes.py
chat-backend/app/db/: crud.py  database.py  models.py
chat-backend/app/schemas/: alert_schema.py  chat_schema.py  event_schema.py  integrity_schema.py  platform_schema.py  report_schema.py  user_schema.py
chat-backend/app/services/: alert_service.py  chat_service.py  integrity_service.py  llm_service.py  monitoring_service.py  report_service.py
chat-backend/app/utils/: auth.py  integrity.py
database/init/: 001-init.sql
docs/: pilot-integration-guide.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/components/ui/: AnalystAuthPage.tsx  AnalystDashboardPage.tsx  BoltStyleChat.tsx  (+6 more)
frontend/lib/: auth.ts  navigation.ts  platform-api.ts
frontend/src/: App.tsx  index.css
sdk/python/blacklogix-agent/: README.md  pyproject.toml
sdk/python/blacklogix-agent/blacklogix_agent/: __init__.py  client.py  monitor.py
sdk/python/blacklogix-agent/examples/: send_events.py
(+6 files in other folders)
